minimal prettier config

--- a/package.json
+++ b/package.json
@@ -19,16 +19,6 @@
   },
   "packageManager": "bun@1.2.21",
   "prettier": {
-    "semi": false,
-    "overrides": [
-      {
-        "files": [
-          "*.json"
-        ],
-        "options": {
-          "trailingComma": "none"
-        }
-      }
-    ]
+    "semi": false
   }
 }
