port over spencerstock/bbq-subscription simply splitting out frontend and backend

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 #SHARED
-ALCHEMY_PASSWORD=todo
+ALCHEMY_PASSWORD=
 
 #BACKEND
-API_KEY=foo
+CDP_API_KEY_ID=
+CDP_API_KEY_SECRET=
+CDP_WALLET_SECRET=
+CDP_ACCOUNT_OWNER_NAME=
+CDP_SMART_ACCOUNT_NAME=
 
 #FRONTEND
+VITE_SERVER_WALLET_ADDRESS=
