--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -11,7 +11,7 @@
   "exports": {
     "./alchemy": {
       "bun": "./alchemy.run.ts",
-      "import": "./alchemy.run.ts",
+      "import": "./alchemy.run.js",
       "types": "./alchemy.run.ts"
     }
   },
@@ -21,5 +21,9 @@
     "alchemy": "^0.66.0",
     "typescript": "^5.9.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@coinbase/cdp-sdk": "^1.38.0",
+    "@base-org/account": "^2.2.0",
+    "viem": "^2.37.6"
+  }
 }
