--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,19 +8,28 @@
     "destroy": "alchemy destroy --app frontend"
   },
   "dependencies": {
+    "backend": "workspace:*",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "backend": "workspace:*"
+    "tailwindcss": "^4.1.13",
+    "@base-org/account": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
     "@cloudflare/workers-types": "4.20250913.0",
+    "vite": "7.1.5",
     "@cloudflare/vite-plugin": "^1.13.0",
     "@vitejs/plugin-react": "^5.0.2",
-    "vite": "7.1.5",
+    "@tailwindcss/vite": "^4.1.13",
+    "vite-tsconfig-paths": "^5.1.4",
     "alchemy": "^0.66.0",
     "miniflare": "^4.20250906.1",
     "typescript": "5.9.2"
+  },
+  "paths": {
+    "@/*": [
+      "./src/*"
+    ]
   }
 }
