--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "exclude": ["node_modules", "lib", "test"],
-  "include": ["types/**/*.ts", "vite/*ts", "src/**/*.ts", "alchemy.run.ts"],
+  "include": ["types/**/*.ts", "vite/*ts", "src/**/*.tsx", "alchemy.run.ts"],
   "compilerOptions": {
     "target": "es2021",
     "jsx": "react-jsx",
@@ -16,6 +16,10 @@
     "rewriteRelativeImportExtensions": true,
     "strict": true,
     "skipLibCheck": true,
-    "types": ["@cloudflare/workers-types"]
+    "types": ["@cloudflare/workers-types"],
+    "paths": {
+      "@/*": ["./src/*"],
+      "@public/*": ["./public/*"]
+    }
   }
 }
