initial charging done, general flow in place

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@coinbase/cdp-sdk": "^1.38.0",
-    "@base-org/account": "^2.2.0",
+    "@base-org/account": "^2.3.0-canary.20250912225908",
     "viem": "^2.37.6",
     "hono": "^4.9.7"
   }
