initializing scripts, readme, and updated base pkg to latest release

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -17,6 +17,7 @@
     "strict": true,
     "skipLibCheck": true,
     "types": ["@cloudflare/workers-types"],
+    "composite": true,
     "paths": {
       "@/*": ["./src/*"],
       "@public/*": ["./public/*"]
