v1 arch init/review - draft

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ CDP_API_KEY_ID=
 CDP_API_KEY_SECRET=
 CDP_WALLET_SECRET=
 CDP_WALLET_NAME= # Running `bun cdp:init` will create EOA & Smart accounts with this name if they don't already exists
+CDP_PAYMASTER_URL=
 
 #FRONTEND
 VITE_COUCH_WALLET_ADDRESS= # Running `bun cdp:init` will automatically update this
