--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,19 +12,20 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
-    "@base-org/account": "^2.2.0"
+    "@base-org/account": "^2.3.1-canary.20250919194036"
   },
   "devDependencies": {
     "@types/react": "19.1.13",
     "@types/react-dom": "19.1.9",
-    "@cloudflare/workers-types": "4.20250913.0",
-    "vite": "7.1.5",
-    "@cloudflare/vite-plugin": "^1.13.0",
-    "@vitejs/plugin-react": "^5.0.2",
+    "@cloudflare/workers-types": "4.20250922.0",
+    "vite": "7.1.7",
+    "@cloudflare/vite-plugin": "^1.13.3",
+    "@vitejs/plugin-react": "^5.0.3",
     "@tailwindcss/vite": "^4.1.13",
     "vite-tsconfig-paths": "^5.1.4",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "alchemy": "^0.67.0",
-    "miniflare": "^4.20250906.1",
+    "miniflare": "^4.20250917.0",
     "typescript": "5.9.2"
   },
   "paths": {
