--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -10,6 +10,10 @@
     "types": ["@cloudflare/workers-types", "node"],
     "declaration": true,
     "declarationMap": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@alchemy.run": ["./alchemy.run.ts"],
+      "@/*": ["./src/*"]
+    }
   }
 }
