--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -22,7 +22,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@base-org/account": "^2.3.1-canary.20250919194036",
+    "@base-org/account": "^2.3.1",
     "@coinbase/cdp-sdk": "^1.38.1",
     "viem": "^2.37.8",
     "hono": "^4.9.8"
