--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,7 +12,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
-    "@base-org/account": "^2.3.1-canary.20250919194036"
+    "@base-org/account": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "19.1.13",
