alchemy providers for coinbase setup

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "cdp:init": "bun ./scripts/cdp-create-wallets && bun ./scripts/cdp-fund-wallets",
-    "cdp:faucet": "bun ./scripts/cdp-fund-wallets",
+    "faucet": "bun node_modules/alchemy/src/coinbase/faucet.ts",
     "dev": "turbo run dev",
     "deploy": "turbo run deploy --ui=stream",
     "destroy": "turbo run destroy --ui=stream",
@@ -18,7 +17,8 @@
   "dependencies": {
     "turbo": "latest",
     "prettier": "latest",
-    "@coinbase/cdp-sdk": "latest"
+    "@coinbase/cdp-sdk": "latest",
+    "alchemy": "https://pkg.pr.new/sam-goodwin/alchemy@f3e84a9"
   },
   "packageManager": "bun@1.2.22",
   "prettier": {
