--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     ],
     "catalog": {
       "alchemy": "https://pkg.pr.new/sam-goodwin/alchemy@f3e84a9",
-      "typescript": "5.9.2"
+      "typescript": "^5.9.2"
     },
     "catalogs": {
       "cloudflare": {
         "miniflare": "^4.20250917.0",
-        "@cloudflare/workers-types": "4.20250922.0"
+        "@cloudflare/workers-types": "^4.20250922.0"
       },
       "coinbase": {
         "@base-org/account": "^2.3.1",
