--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "frontend",
+  "name": "demo",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "alchemy dev --stage dev --adopt --app frontend",
+    "dev": "alchemy dev --stage dev --adopt --app demo",
     "deploy": "alchemy deploy --adopt --app frontend",
     "destroy": "alchemy destroy --app frontend"
   },
   "dependencies": {
-    "backend": "workspace:*",
     "@base-org/account": "catalog:coinbase",
+    "@radix-ui/react-slot": "^1.2.3",
+    "backend": "workspace:*",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "hono": "^4.9.8",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13",
-    "hono": "^4.9.8"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "alchemy": "catalog:",
     "typescript": "catalog:",
+    "alchemy": "catalog:",
     "miniflare": "catalog:cloudflare",
     "@cloudflare/workers-types": "catalog:cloudflare",
     "vite": "7.1.7",
+    "tw-animate-css": "^1.4.0",
     "@cloudflare/vite-plugin": "^1.13.3",
-    "@vitejs/plugin-react": "^5.0.3",
     "@tailwindcss/vite": "^4.1.13",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vite-plugin-node-polyfills": "^0.24.0",
     "@types/react": "19.1.13",
-    "@types/react-dom": "19.1.9"
+    "@types/react-dom": "19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "paths": {
     "@/*": [
