--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "exclude": ["node_modules", "lib", "test"],
-  "include": ["types/**/*.ts", "vite/*ts", "src/**/*.tsx", "alchemy.run.ts"],
+  "include": [
+    "types/**/*.ts",
+    "vite/*ts",
+    "src/**/*.tsx",
+    "src/**/*.ts",
+    "alchemy.run.ts"
+  ],
   "compilerOptions": {
     "target": "es2021",
     "jsx": "react-jsx",
