--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "@base-org/account": "catalog:coinbase",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -25,6 +31,7 @@
     "alchemy": "catalog:",
     "miniflare": "catalog:cloudflare",
     "@cloudflare/workers-types": "catalog:cloudflare",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vite": "7.1.7",
     "tw-animate-css": "^1.4.0",
     "@cloudflare/vite-plugin": "^1.13.3",
