--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "turbo run deploy --ui=stream",
     "destroy": "turbo run destroy --ui=stream",
     "check": "bun tsc --noEmit && biome check",
-    "fix": "biome check --write"
+    "check:fix": "biome check --write"
   },
   "workspaces": {
     "packages": [
