--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "demo",
+  "name": "playground",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "alchemy dev --stage dev --adopt --app demo",
-    "destroy": "alchemy destroy --app demo"
+    "dev": "alchemy dev --stage dev --adopt --app couch-playground",
+    "destroy": "alchemy destroy --app couch-playground"
   },
   "dependencies": {
     "backend": "workspace:*",
     "@base-org/account": "catalog:coinbase",
+    "hono": "catalog:cloudflare",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
@@ -18,7 +19,6 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "hono": "^4.9.8",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
