--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -14,7 +14,7 @@
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "bundler",
-    "types": ["@cloudflare/workers-types", "node"],
+    "types": ["@cloudflare/workers-types", "node", "bun"],
     "declaration": true,
     "declarationMap": true,
     "skipLibCheck": true,
