--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -7,9 +7,8 @@
     "destroy": "alchemy destroy --app couch-playground"
   },
   "dependencies": {
-    "backend": "workspace:*",
     "@base-org/account": "catalog:coinbase",
-    "hono": "catalog:cloudflare",
+    "@coinbase/cdp-sdk": "^1.38.4",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
@@ -17,8 +16,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hono": "catalog:cloudflare",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
