--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "private": true,
   "scripts": {
     "dev": "turbo dev --ui=tui",
-    "test": "turbo test",
-    "fix": "turbo fix",
+    "test": "turbo typecheck && turbo test:unit",
+    "test:unit": "turbo test:unit",
+    "lint": "biome lint .",
+    "format": "biome format .",
+    "typecheck": "turbo typecheck",
+    "fix": "biome check . --write",
     "dev:faucet": "bun node_modules/alchemy/src/coinbase/faucet.ts",
     "gh:setup:dev": "alchemy deploy scripts/github.dev.environment.ts",
     "gh:setup:sandbox": "alchemy deploy scripts/github.sandbox.environment.ts",
