--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "alchemy dev --stage dev --adopt --app couch-backend",
-    "infra:deploy": "alchemy deploy --stage $STAGE --app couch-backend",
-    "infra:destroy": "alchemy destroy --stage $STAGE --app couch-backend",
+    "infra:deploy": "alchemy deploy --stage $STAGE --adopt --app couch-backend",
+    "infra:destroy": "alchemy destroy --stage $STAGE --adopt --app couch-backend",
     "db:generate": "drizzle-kit generate",
-    "test": "tsc --noEmit && biome check && bun test",
-    "fix": "biome check --write"
+    "test:unit": "bun test",
+    "typecheck": "tsc --noEmit"
   },
   "exports": {
     "./alchemy": {
