--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -10,13 +10,11 @@
   "exclude": ["node_modules", "lib"],
   "compilerOptions": {
     "rootDir": ".",
-    "composite": true,
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "bundler",
     "types": ["@cloudflare/workers-types", "node", "bun"],
-    "declaration": true,
-    "declarationMap": true,
+    "strict": true,
     "skipLibCheck": true,
     "paths": {
       "@alchemy.run": ["./alchemy.run.ts"],
