--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "alchemy dev --stage dev --adopt --app couch-playground",
-    "infra:deploy": "alchemy deploy --stage $STAGE --app couch-playground",
-    "infra:destroy": "alchemy destroy --stage $STAGE --app couch-playground",
-    "test": "echo 'No tests configured'",
-    "fix": "echo 'No linting configured'"
+    "infra:deploy": "alchemy deploy --stage $STAGE --adopt --app couch-playground",
+    "infra:destroy": "alchemy destroy --stage $STAGE --adopt --app couch-playground",
+    "test:unit": "echo 'No tests configured'",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@base-org/account": "catalog:coinbase",
