DO for simple storage instead of D1 for playground app

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ ALCHEMY_PASSWORD=
 CDP_API_KEY_ID=
 CDP_API_KEY_SECRET=
 CDP_WALLET_SECRET=
-CDP_PAYMASTER_URL=
+CDP_CLIENT_API_KEY=
 
 #DEMO APP
 COUCH_API_KEY=
