fix: resolve preview deployment issues
- Configure state store to use FileSystemStateStore locally and CloudflareStateStore in CI
- Add CI detection using process.env.CI and GITHUB_ACTIONS
- Add STAGE to turbo.json passThroughEnv for infra:deploy and infra:destroy
- Fix GitHub Actions output to only set in CI environments
- Remove debugging logs and clean up code
- Ensure --adopt flag works correctly with existing resources

The deployment now works both locally (for testing) and in CI environments.
Local: Uses FileSystemStateStore, no GitHub output
CI: Uses CloudflareStateStore, sets GitHub Actions output

--- a/turbo.json
+++ b/turbo.json
@@ -29,10 +29,12 @@
       "dependsOn": ["test"]
     },
     "infra:deploy": {
-      "cache": false
+      "cache": false,
+      "passThroughEnv": ["STAGE"]
     },
     "infra:destroy": {
-      "cache": false
+      "cache": false,
+      "passThroughEnv": ["STAGE"]
     }
   }
 }
