fix: add GITHUB_OUTPUT to turbo.json passThroughEnv
- GITHUB_OUTPUT is required for writing GitHub Actions outputs
- Without it, alchemy.env.GITHUB_OUTPUT throws an error
- This env var contains the path to the file where outputs should be written

--- a/turbo.json
+++ b/turbo.json
@@ -42,7 +42,8 @@
         "CDP_CLIENT_API_KEY",
         "COUCH_WEBHOOK_SECRET",
         "COUCH_API_KEY",
-        "GITHUB_TOKEN"
+        "GITHUB_TOKEN",
+        "GITHUB_OUTPUT"
       ]
     },
     "infra:destroy": {
