--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -10,8 +10,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "backend": "workspace:*",
     "@base-org/account": "catalog:coinbase",
-    "@coinbase/cdp-sdk": "^1.38.4",
+    "@coinbase/cdp-sdk": "catalog:coinbase",
+    "hono": "catalog:cloudflare",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
@@ -19,15 +21,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "backend": "workspace:*",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "hono": "catalog:cloudflare",
-    "lucide-react": "^0.544.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "lucide-react": "^0.545.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
     "typescript": "catalog:",
@@ -35,13 +35,13 @@
     "miniflare": "catalog:cloudflare",
     "@cloudflare/workers-types": "catalog:cloudflare",
     "vite-plugin-node-polyfills": "^0.24.0",
-    "vite": "7.1.7",
+    "vite": "7.1.10",
     "tw-animate-css": "^1.4.0",
-    "@cloudflare/vite-plugin": "^1.13.3",
-    "@tailwindcss/vite": "^4.1.13",
-    "@types/react": "19.1.13",
-    "@types/react-dom": "19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
+    "@cloudflare/vite-plugin": "^1.13.13",
+    "@tailwindcss/vite": "^4.1.14",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "@vitejs/plugin-react": "^5.0.4",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
