--- a/turbo.json
+++ b/turbo.json
@@ -26,18 +26,11 @@
     },
     "db:generate": {
       "cache": false,
-      "dependsOn": [
-        "test"
-      ]
+      "dependsOn": ["test"]
     },
     "infra:deploy": {
       "cache": false,
-      "env": [
-        "STAGE",
-        "GITHUB_ACTIONS",
-        "GITHUB_SHA",
-        "PULL_REQUEST"
-      ],
+      "env": ["STAGE", "GITHUB_ACTIONS", "GITHUB_SHA", "PULL_REQUEST"],
       "passThroughEnv": [
         "ALCHEMY_PASSWORD",
         "ALCHEMY_STATE_TOKEN",
@@ -57,12 +50,7 @@
     },
     "infra:destroy": {
       "cache": false,
-      "env": [
-        "STAGE",
-        "GITHUB_ACTIONS",
-        "GITHUB_SHA",
-        "PULL_REQUEST"
-      ],
+      "env": ["STAGE", "GITHUB_ACTIONS", "GITHUB_SHA", "PULL_REQUEST"],
       "passThroughEnv": [
         "ALCHEMY_PASSWORD",
         "ALCHEMY_STATE_TOKEN",
